<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        tools:ignore="RtlSymmetry,UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="105dp"
            android:layout_height="158dp"
            android:padding="4dp"
            android:scaleType="fitXY" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/booknameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nahid_hasan"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/authorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cse" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100tk" />

    </LinearLayout>
</RelativeLayout>