<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C6C4C4"
    android:gravity="center"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="match_parent"
                android:layout_height="127dp"
                app:autoPlay="true"
                app:fillColor="#FFFFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:pageColor="#00000000"
                app:radius="6dp"
                app:slideInterval="2000"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp"
                tools:ignore="MissingClass" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/hedding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/islamic_book"
                    android:layout_marginLeft="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/view_all"
                    app:backgroundTint="#0097A7"
                    app:cornerRadius="20dp"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="4dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/hedding2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/programming_book"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/view_all"
                    app:backgroundTint="#0097A7"
                    app:cornerRadius="20dp"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="4dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/hedding3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/novel_book"
                    android:layout_marginLeft="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/view_all"
                    app:backgroundTint="#0097A7"
                    app:cornerRadius="20dp"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:padding="4dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/hedding4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horror_book"
                    android:layout_marginLeft="5dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/view_all"
                    app:backgroundTint="#0097A7"
                    app:cornerRadius="20dp"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#fff"
                android:padding="4dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>